--- a/index.css
+++ b/index.css
@@ -2,47 +2,205 @@
 {
     margin: 0;
     padding: 0;
-}
+    background-size:cover;
+   }
 body 
 {
-    color: brown;
+    color: black;
     font-family: sans-serif;
+    background:linear-gradient(rgba(0,0,0,0.4),
+     rgba(0,0,0,0.4)),url(img/bg.jpg) no-repeat center fixed;
+    background-size:cover;
+    
 }
 header {
     background-color: #0769e9;
-    height: 80px;
-    position: fixed;
     width: 100%;
     top: 0;
     left: 0;
 }
-.nav {
+.nav{
+    padding:4px 60px;
     display: flex;
     justify-content: space-between;
-    padding-top: 12px;
 }
-.nav-menu {
-    display: flex;
+.nav-menu li{
     list-style: none;
-    padding-right: 30px;
+    padding: 0px 10px;
+    
+}
+.nav-menu a{
+    color: white;
+    font-size: 24px;
+    font-family: 'Architects Daughter', cursive;
+    text-decoration: none;
+    padding: 0px 12px;
+}
+.nav-menu{
+    padding: 0px 16px;
+    padding-top: 8px;
+    display: flex;
+    justify-content: space-around;
+}
+.logo{
+    color: white;
+    padding: 1px;
+    font-size: 34px;
+    text-decoration: none;
+    font-family: 'Indie Flower', cursive;;
+}
+.about{
+    margin: 16px 12px;
+    display: flex;
+    justify-content: space-around;
+}
+.about div{
+    padding-top: 45px;
+    padding-bottom: 100px;
+}
+.about-name{
+    margin-top: 50px;
+    padding-left: 50px;
+    width: 40%;
+
+}
+.about h2{
+    font-family: 'Source Code Pro', monospace;
+    color: white;
+    font-size: 36px;
+}
+.about h3{
+    font-family: 'Source Code Pro', monospace;
+    color: white;
+    font-size: 29px;
+}
+.about-img img{
+    width: 600px;
+
+}
+
+.container-skills{
+    padding: 40px 20px;
+    color: white;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    column-gap: 3px;
+    row-gap: 55px;
+    text-align: center;
+    justify-items: center;
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 18px;
+}
+.container-skills img{
+    width: 54%;
+    justify-self: center;
+}
+.div-skill{
+    row-gap: 14px;
+    display: grid;
+}
+.container {
+
+    display: block;
+}
+.dedo img{
+    padding:10px 10px;
+    width: 16%;
+}
+.dedo{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+
+}
+.SKILLS{
+    color: white;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 38px;
+}
+.acerca{
+    padding-top: 40px;
+    color: white;
+    text-align: center;
+    font-size: 38px;
+    font-family: 'Montserrat', sans-serif;
+}
+@media (max-width:550px){
     
     
 }
 
-.nav-menu-link{
-    display: flex;
-    font-size: 26px;
-    color: beige;
-    padding: 8px 24px;
-    text-decoration: none;
-    font-family: 'Indie Flower', cursive;
+@media (max-width:830px){
+    .about-name{
+        width: 86%;
+    }
+    .about{
+        display: block;
+    }
+    .about-img img{
+        width: 390px;
+    }
+    .container-skills{
+        grid-template-columns: repeat(4,1fr);
+
+    }
 }
-.logo{
-    text-decoration: none;
-    list-style-type: none;
-    font-size: 28px;
-    font-family: 'Mochiy Pop P One', sans-serif;
+@media (max-width:610px){
+    .container-skills{
+        grid-template-columns: repeat(3,1fr);
+
+    }
+
+}
+@media (max-width:750px){
+    .about.name{
+        padding-bottom: 0px;
+    }
+    .nav-menu{
+        display: inline;
+    }
+    .about-img img{
+        display: none;
+    
+    }
+    .about h2{
+        font-family: 'Source Code Pro', monospace;
+        color: white;
+        font-size: 28px;
+    }
+    .about h3{
+        font-family: 'Source Code Pro', monospace;
+        color: white;
+        font-size: 24px;
+    }
+}
+.proy {
+    padding-top: 70px;
+    padding-bottom: 70px;
     color: white;
-    padding: 2px 16px;
-    padding-left: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 38px;
+    text-align: center;
+}
+.proyectos{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    justify-items: center;
+    row-gap: 40px;
+    column-gap: 40px;
+}
+.proyect{
+    color: white;
+    font-family: 'Source Code Pro', monospace;
+    display: grid;
+    text-align: center;
+    justify-items: center;
+}
+.proyect img{
+    display: grid;
+    width: 30%;
+    
 }
